0.18 (2012-04-19)
-----------------

- Added graceful degeneration when provided with uknown character encoding in 
  a MIME text part.

0.17 (2011-09-26)
-----------------

- Added a header, 'X-Postoffice-Date', to queued messages.  It records
  the time each message was received (as seconds since the epoch.)  It
  is set to the modified time of the maildir message file.  

0.16 (2011-06-30)
-----------------

- Added better fault tolerance for insane date headers generated by spambots.
  (LP #697033)

0.15 (2011-06-15)
-----------------

- Body checks are now multiline regexp checks. (LP #787573)

0.14 (2011-05-17)
-----------------

- Fixed problem where the zodb_uri could be unicode, which eventually breaks
  the ZEO client for ZEO uris.  zodb_uri is now converted to a UTF-8 string.

0.13 (2011-05-05)
-----------------

- Fixed problem with header filters not working properly with non-ASCII
  characters in headers.  (LP #777455)

- Fixed bug in regular expression body filter which improperly parsed the
  'Content-Type' header in order to extract the character set of a Mime part.

0.12 (2011-04-25)
-----------------

- Respect leading and trailing whitespace in rules files.

0.11 (2011-04-25)
-----------------

- When a message is rejected by a filter, a message is logged showing which
  filter triggered the rejection.

0.10 (2011-04-20)
-----------------

- Improved logging output now includes a timestamp.

- Worked around (probable) bug in stdlib email parser where a message part
  might have a charset set in the 'Content-Type' header, but
  message.get_charset() returns None.

0.9 (2011-04-15)
----------------

- Added greater fault tolerance for malformed email addresses.  (Shakes fist at
  spammers.)

- Added four new filter types based on regular expression matching:
  `header_regexp`, `header_regexp_file`, `body_regexp`, `body_regexp_file`.
  See README.txt for information on how to use these new filters.
